--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -15,8 +15,7 @@
     height: 240px;
     display: flex;
     flex-direction: column;
-    overflow: scroll;
-    scrollbar-width: none;
+    overflow: auto;
   }
 
   button {
