--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -16,6 +16,12 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
+
+    .empty-message {
+      color: red;
+      font-size: 18px;
+      margin: 50px auto;
+    }
   }
 
   button {
