moved our ditectory and shop data into its own reducer, directory/shop

--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -23,6 +23,11 @@
     }
   }
 
+  .empty-cart {
+    color: red;
+    margin-top: 25px;
+  }
+
   .total {
     margin-top: 30px;
     margin-left: auto;
